fix: change logo and fork position on mobile version

--- a/_sass/jekyll-theme-leap-day.scss
+++ b/_sass/jekyll-theme-leap-day.scss
@@ -473,7 +473,7 @@ footer {
   }
 }
 
-@media print, screen and (max-width: 640px) {
+@media print, screen and (max-width: 665px) {
 
   #banner {
 
